--- a/flycat-springboot/flycat-configure/src/main/resources/META-INF/spring-autoconfigure-metadata.properties
+++ b/flycat-springboot/flycat-configure/src/main/resources/META-INF/spring-autoconfigure-metadata.properties
@@ -15,5 +15,5 @@
 #
 
 MybatisConfiguration.ConditionalOnClass=org.mybatis.spring.mapper.MapperScannerConfigurer
-WebConfiguration.ConditionalOnClass=com.github.flycat.web.WebApiConfiguration
+WebConfiguration.ConditionalOnClass=com.github.flycat.web.WebFactoryConfiguration
 WechatConfiguration.ConditionalOnClass=com.github.flycat.wechat.WechatLogin
