--- a/config/gradle/bootProject.gradle
+++ b/config/gradle/bootProject.gradle
@@ -64,7 +64,23 @@ bootDistZip.enabled = false
 
 //    processResources.dependsOn copyConfiguration
 
+
+configurations {
+    // replaced with jcl-over-slf4j
+    all*.exclude group: 'commons-logging', module: 'commons-logging'
+    // replaced with log4j-over-slf4j
+    all*.exclude group: 'log4j', module: 'log4j'
+//    compile.exclude module: "spring-boot-starter-tomcat"
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+}
+
+
 dependencies {
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
+
 //        testCompile "org.springframework:spring-test"
 //        testCompile "org.springframework.boot:spring-boot-test"
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
@@ -76,18 +92,6 @@ bootJar {
 }
 
 
-configurations {
-
-    // replaced with jcl-over-slf4j
-    all*.exclude group: 'commons-logging', module: 'commons-logging'
-    // replaced with log4j-over-slf4j
-    all*.exclude group: 'log4j', module: 'log4j'
-//    compile.exclude module: "spring-boot-starter-tomcat"
-    developmentOnly
-    runtimeClasspath {
-        extendsFrom developmentOnly
-    }
-}
 
 bootRun {
     systemProperties = System.properties
