--- a/flycat-springboot/flycat-mybatis/build.gradle
+++ b/flycat-springboot/flycat-mybatis/build.gradle
@@ -1,5 +1,7 @@
 
 dependencies {
+    api project(':flycat-util')
+
     api "org.springframework.boot:spring-boot-starter-jdbc:$springBootVersion"
     
     // Datasource
