--- a/flycat-util/build.gradle
+++ b/flycat-util/build.gradle
@@ -15,6 +15,6 @@ dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.8'
     compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
     compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.6.2'
-
+    compile 'org.modelmapper:modelmapper:2.3.0'
 
 }
