chore(util): add util methods

--- a/flycat-springboot/flycat-app/build.gradle
+++ b/flycat-springboot/flycat-app/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     api project(':flycat-springboot-web')
 
 
+    api project(':flycat-cache-guava')
     api project(':flycat-config-redis')
     api project(':flycat-cache-redis')
     api project(':flycat-alarm-mail')
