feat(module): add markdown lib

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,5 @@ apply from: "./flycat-datasource/settings.gradle"
 apply from: "./flycat-springboot/settings.gradle"
 
 apply from: "./flycat-json/settings.gradle"
+
+apply from: "./flycat-lib/settings.gradle"
