build(gradle): add maven config to publish

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,14 @@ plugins {
     id "com.github.hierynomus.license" version "0.15.0"
     id "io.freefair.lombok" version "4.1.0"
     id 'idea'
+
+    id 'maven-publish'
+    id 'signing'
+    id 'java-library'
 }
+
+ext.flycatVersion = '0.1.2'
+ext.flycatGroup = 'com.github.zgqq'
 
 ext.configDir = "${project.rootDir}/config"
 ext.checkstyleDir = "${configDir}/checkstyle"
@@ -64,8 +71,8 @@ configure(javaProjects) { project ->
     }
 
 
-    group "com.github.flycat"
-    version "0.0.1-SNAPSHOT"
+    group "$flycatGroup"
+    version "$flycatVersion"
 
 
     targetCompatibility = vJavaLang
@@ -116,3 +123,151 @@ configure(bootProjects) { project ->
     apply from: "${gradleConfigDir}/bootProject.gradle"
 }
 
+ext.jarProjects = javaProjects.findAll {
+    !it.name.endsWith("-sba")
+}
+
+
+configure(jarProjects) { project ->
+
+    apply plugin: 'java'
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
+
+    task sourceJar(type: Jar) {
+        classifier "sources"
+        from sourceSets.main.allJava
+    }
+
+    task javadocJar(type: Jar, dependsOn: javadoc) {
+        classifier "javadoc"
+        from javadoc.destinationDir
+    }
+
+    artifacts {
+        archives jar
+        archives sourceJar
+        archives javadocJar
+    }
+
+    signing {
+        useGpgCmd()
+        sign configurations.archives
+    }
+
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                customizePom(pom)
+                groupId "$flycatGroup"
+                artifactId "${project.name}"
+                version "$flycatVersion"
+
+                from components.java
+
+                // create the sign pom artifact
+                pom.withXml {
+                    def pomFile = file("${project.buildDir}/generated-pom.xml")
+                    writeTo(pomFile)
+                    def pomAscFile = signing.sign(pomFile).signatureFiles[0]
+                    artifact(pomAscFile) {
+                        classifier = null
+                        extension = 'pom.asc'
+                    }
+                }
+
+                artifact(sourceJar) {
+                    classifier = 'sources'
+                }
+                artifact(javadocJar) {
+                    classifier = 'javadoc'
+                }
+
+                // create the signed artifacts
+                project.tasks.signArchives.signatureFiles.each {
+                    artifact(it) {
+                        def matcher = it.file =~ /-(sources|javadoc)\.jar\.asc$/
+                        if (matcher.find()) {
+                            classifier = matcher.group(1)
+                        } else {
+                            classifier = null
+                        }
+                        extension = 'jar.asc'
+                    }
+                }
+
+
+            }
+        }
+        repositories {
+            maven {
+                url "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+                // url "https://oss.sonatype.org/content/repositories/snapshots"
+                credentials {
+                    username sonatypeUsername
+                    password sonatypePassword
+                }
+            }
+        }
+    }
+
+
+
+    model {
+        tasks.generatePomFileForMavenJavaPublication {
+            destination = file("$buildDir/generated-pom.xml")
+        }
+        tasks.publishMavenJavaPublicationToMavenLocal {
+            dependsOn project.tasks.signArchives
+        }
+        tasks.publishMavenJavaPublicationToMavenRepository {
+            dependsOn project.tasks.signArchives
+        }
+    }
+}
+
+
+def customizePom(pom) {
+    pom.withXml {
+        def root = asNode()
+
+        // eliminate test-scoped dependencies (no need in maven central POMs)
+        root.dependencies.removeAll { dep ->
+            dep.scope == "test"
+        }
+
+        // add all items necessary for maven central publication
+        root.children().last() + {
+            resolveStrategy = Closure.DELEGATE_FIRST
+
+            description 'Simplify Java web and microservice development'
+            name 'github.flycat Java'
+            url 'https://github.com/zgqq/flycat'
+            organization {
+                name 'com.github.zgqq'
+                url 'https://github.com/zgqq'
+            }
+            issueManagement {
+                system 'GitHub'
+                url 'https://github.com/zgqq/flycat/issues'
+            }
+            licenses {
+                license {
+                    name 'Apache License 2.0'
+                    url 'https://github.com/zgqq/flycat/blob/develop/LICENSE'
+                    distribution 'repo'
+                }
+            }
+            scm {
+                url 'https://github.com/zgqq/flycat'
+                connection 'scm:git:git://github.com/zgqq/flycat.git'
+                developerConnection 'scm:git:ssh://git@github.com:zgqq/flycat.git'
+            }
+            developers {
+                developer {
+                    name 'zgqq'
+                }
+            }
+        }
+    }
+}
