--- a/flycat-template/flycat-simple/build.gradle
+++ b/flycat-template/flycat-simple/build.gradle
@@ -35,7 +35,7 @@ repositories {
 
 dependencies {
 	compile 'org.webjars:bootstrap:4.2.1'
-	compile "com.github.flycat:flycat-springboot-app:0.0.1-SNAPSHOT"
+	compile "com.github.zgqq:flycat-springboot-app:0.1.2"
 	compile "org.springframework.boot:spring-boot-starter-thymeleaf"
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
