fix(redis): fix npe

--- a/flycat-config/flycat-config-redis/build.gradle
+++ b/flycat-config/flycat-config-redis/build.gradle
@@ -2,6 +2,7 @@
 dependencies {
     api project(':flycat-context')
     api project(':flycat-config-spi')
+    api project(':flycat-task')
     implementation project(':flycat-redis')
 }
 
