--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -5,7 +5,8 @@ if (hasProperty("env")) {
 
 ext.env = ext.environment
 ext.isProd = { env ->
-    return "prod".equals(env.toString()) || "production".equals(env.toString()) || "product".equals(env.toString())
+    return "prod".equals(env.toString()) || "production".equals(env.toString()) ||
+            "product".equals(env.toString()) || "docker".equals(env.toString())
 }
 
 ext.isTestServer = { env ->
