feat(agent): add agent framework

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,6 @@ apply from: "./flycat-springboot/settings.gradle"
 apply from: "./flycat-json/settings.gradle"
 
 apply from: "./flycat-lib/settings.gradle"
+
+
+include 'flycat-agent'
