fix(agent): fix npe

--- a/flycat-springboot/flycat-context/build.gradle
+++ b/flycat-springboot/flycat-context/build.gradle
@@ -1,6 +1,7 @@
 
 dependencies {
     api project(':flycat-context')
+    api project(':flycat-agent')
     api "org.springframework.boot:spring-boot:$springBootVersion"
 }
 
