feat(agent): auto trace method

--- a/flycat-springboot/flycat-context/build.gradle
+++ b/flycat-springboot/flycat-context/build.gradle
@@ -3,6 +3,8 @@ dependencies {
     api project(':flycat-context')
     api project(':flycat-agent')
     api "org.springframework.boot:spring-boot:$springBootVersion"
+    api "org.springframework.boot:spring-boot-starter-aop:$springBootVersion"
+
 }
 
 
