--- a/build.gradle
+++ b/build.gradle
@@ -25,10 +25,9 @@ buildscript {
 
 plugins {
     id 'org.springframework.boot' version "${springBootVersion}" apply false
-    id "com.github.hierynomus.license" version "0.15.0"
-    id "io.freefair.lombok" version "4.1.0"
+    id "com.github.hierynomus.license" version "0.15.0" apply false
+    id "io.freefair.lombok" version "4.1.0" apply false
     id 'idea'
-
     id 'maven-publish'
     id 'signing'
     id 'java-library'
@@ -152,7 +151,6 @@ configure(jarProjects) { project ->
     apply plugin: 'java'
     apply plugin: 'maven-publish'
     apply plugin: 'signing'
-
 
 
     task sourceJar(type: Jar) {
