--- a/flycat-config/flycat-config-spi/build.gradle
+++ b/flycat-config/flycat-config-spi/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
     api project(':flycat-context')
-    api project(':flycat-json-spi')
+    api project(':flycat-spi')
 //    compile project(':base-core')
 }
 
