refactor(spi): remove sms spi module

--- a/flycat-sms/flycat-sms-qcloud/build.gradle
+++ b/flycat-sms/flycat-sms-qcloud/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    api project(':flycat-sms-spi')
+    api project(':flycat-spi')
     api group: 'com.github.qcloudsms', name: 'qcloudsms', version: '1.0.6'
 }
 
