refactor(spi): remove alarm spi module

--- a/flycat-alarm/flycat-alarm-mail/build.gradle
+++ b/flycat-alarm/flycat-alarm-mail/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    api project(':flycat-alarm-spi')
+    api project(':flycat-spi')
     api 'org.simplejavamail:simple-java-mail:5.2.0'
     implementation project(':flycat-context')
     implementation project(':flycat-util')
