--- a/flycat-springboot/flycat-sba/build.gradle
+++ b/flycat-springboot/flycat-sba/build.gradle
@@ -4,7 +4,7 @@ startScripts {
 
 dependencies {
     implementation project(':flycat-context')
-    implementation project(':flycat-alarm-spi')
+    implementation project(':flycat-spi')
 
     compile group: 'de.codecentric', name: 'spring-boot-admin-starter-server', version: '2.1.6'
     compile "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
