--- a/flycat-cache/flycat-cache-ehcache/build.gradle
+++ b/flycat-cache/flycat-cache-ehcache/build.gradle
@@ -1,6 +1,6 @@
 
 dependencies {
-    api project(':flycat-cache-spi')
+    api project(':flycat-spi')
     api 'org.ehcache:ehcache:3.7.0'
     implementation 'javax.cache:cache-api:1.1.1'
 }
