refactor(spi): remove task spi module

--- a/flycat-config/flycat-config-redis/build.gradle
+++ b/flycat-config/flycat-config-redis/build.gradle
@@ -2,7 +2,7 @@
 dependencies {
     api project(':flycat-context')
     api project(':flycat-config-spi')
-    api project(':flycat-task')
+    api project(':flycat-spi')
     implementation project(':flycat-redis')
 }
 
