--- a/flycat-config/flycat-config-nacos/build.gradle
+++ b/flycat-config/flycat-config-nacos/build.gradle
@@ -1,6 +1,6 @@
 
 dependencies {
-    api project(':flycat-config-spi')
+    api project(':flycat-spi')
     implementation group: 'com.alibaba.nacos', name: 'nacos-client', version: '0.9.1'
 }
 
