refactor(module): move redis to spi impl

--- a/flycat-spi-impl/flycat-config-redis/build.gradle
+++ b/flycat-spi-impl/flycat-config-redis/build.gradle
@@ -2,7 +2,7 @@
 dependencies {
     api project(':flycat-context')
     api project(':flycat-spi')
-    implementation project(':flycat-redis')
+    implementation project(':flycat-spi')
 }
 
 
