--- a/flycat-springboot/flycat-app/build.gradle
+++ b/flycat-springboot/flycat-app/build.gradle
@@ -13,7 +13,7 @@ dependencies {
     api project(':flycat-cache-guava')
     api project(':flycat-config-redis')
     api project(':flycat-cache-redis')
-    api project(':flycat-alarm-mail')
+    api project(':flycat-notifier')
     api project(':flycat-ds-hikari')
     api project(':flycat-json-jackson')
 
